--- a/try_freezed/pubspec.yaml
+++ b/try_freezed/pubspec.yaml
@@ -15,5 +15,6 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.4.14
   freezed: ^2.5.8
+  json_serializable: ^6.9.3
   lints: ^5.0.0
   test: ^1.24.0
